# github-actions

./: .gitignore  .pdm-python  alex-c-line.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: breaking_change.md  internal_change.md  new_feature.md  refactor.md
.github/workflows/: _audit-javascript-dependencies.yml  _ci.yml  _comment-outdated.yml  _commit-version-change.yml  _create-github-release.yml  _create-pull-request-templates.yml  _restrict-alex-up-bot-branches.yml  _scheduled-patch-release.yml  _self-ci.yml  _update-dependencies.yml  actions-ci.yml  audit-javascript-dependencies.yml  comment-outdated.yml  commit-version-change.yml  create-change-request.yml  create-feature-docs.yml  create-github-release.yml  create-pull-request-templates.yml  end-to-end-node-package-ci.yml  internal-commit-version-change.yml  npm-registry-publish.yml  package-ci.yml  pnpm-ci.yml  publish-github-pages.yml  restrict-alex-up-bot-branches.yml  scheduled-patch-release.yml  security-ci.yml  self-ci.yml  update-dependencies.yml  version-change-ci.yml
.husky/: pre-commit
artwork/: .gitignore  pyproject.toml
docs/releases/major/: v7.0.0.md
docs/releases/minor/: v7.1.0.md  v7.2.0.md
docs/releases/patch/: v7.0.1.md  v7.2.1.md  v7.2.2.md  v7.2.3.md  v7.2.4.md  v7.2.5.md  v7.2.6.md
docs/releases/v10/v10.0/: v10.0.0.md
docs/releases/v10/v10.1/: v10.1.0.md  v10.1.1.md
docs/releases/v10/v10.2/: v10.2.0.md
docs/releases/v10/v10.3/: v10.3.0.md  v10.3.1.md
docs/releases/v10/v10.4/: v10.4.0.md
docs/releases/v10/v10.5/: v10.5.0.md  v10.5.1.md
docs/releases/v11/v11.0/: v11.0.0.md  v11.0.1.md  v11.0.2.md  v11.0.3.md  v11.0.4.md  v11.0.5.md  v11.0.6.md  v11.0.7.md  v11.0.8.md
docs/releases/v11/v11.1/: v11.1.0.md
docs/releases/v11/v11.2/: v11.2.0.md  v11.2.1.md  v11.2.2.md  v11.2.3.md  v11.2.4.md  v11.2.5.md  v11.2.6.md
docs/releases/v12/v12.0/: v12.0.0.md  v12.0.1.md  v12.0.2.md
docs/releases/v12/v12.1/: v12.1.0.md
docs/releases/v12/v12.2/: v12.2.0.md
docs/releases/v12/v12.3/: v12.3.0.md  v12.3.1.md
docs/releases/v12/v12.4/: v12.4.0.md  v12.4.1.md
docs/releases/v12/v12.5/: v12.5.0.md
docs/releases/v2/v2.12/: v2.12.0.md  v2.12.1.md
docs/releases/v2/v2.13/: v2.13.0.md
docs/releases/v2/v2.14/: v2.14.0.md
docs/releases/v3/v3.0/: v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.0.3.md  v3.0.4.md  v3.0.5.md
docs/releases/v3/v3.1/: v3.1.0.md  v3.1.1.md  v3.1.2.md
docs/releases/v4/v4.0/: v4.0.0.md  v4.0.1.md  v4.0.2.md  v4.0.3.md  v4.0.4.md  v4.0.5.md  v4.0.6.md
docs/releases/v4/v4.1/: v4.1.0.md
docs/releases/v5/v5.0/: v5.0.0.md
docs/releases/v6/v6.0/: v6.0.0.md
docs/releases/v7/v7.0/: v7.0.0.md  v7.0.1.md
docs/releases/v7/v7.2/: v7.2.0.md  v7.2.1.md  v7.2.2.md  v7.2.3.md  v7.2.4.md  v7.2.6.md
(+16 files in other folders)
