[project]
name = "github-actions"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
[[project.authors]]
name = "AlexMan123456"
email = "alex.man03888@gmail.com"

[dependency-groups]
dev = [
  "pyproject-fmt==2.25.3",
  "zizmor==1.28",
]

[tool.pdm]
distribution = false
[tool.pdm.scripts]
format = { composite = [ "format-pyproject" ] }
format-pyproject = { shell = "pyproject-fmt pyproject.toml || true" }
lint = { composite = [ "lint-zizmor", "lint-pyproject" ] }
lint-pyproject = "pyproject-fmt --check pyproject.toml"
lint-zizmor = "zizmor ."

[tool.pyproject-fmt]
generate_python_version_classifiers = false
table_format = "long"
